--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     justify-content: center;
     position: relative;
     transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1);
+    overflow: auto;
 }
 
 .ukryta {
@@ -57,6 +58,7 @@ body {
 #sekcja-druga.pokazana {
     transform: translateY(0) !important; /* zsuwa się w dół do widocznej pozycji */
     opacity: 1 !important;
+    overflow-y: scroll;
 }
 
 #sekcja-startowa.ukryta {
