--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 #sekcja-druga {
     position: fixed;
-    padding-top: 950px;
+    padding-top: 50px;
     top: 0;
     left: 0;
     width: 100%;
@@ -100,7 +100,7 @@ h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 1.4rem;
     color: white;
-    position: relative;
+    position: absolute;
     flex-shrink: 0;
     margin-top: auto;
     padding-bottom: 30px;
