--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     line-height: 1.5;
-    overflow: hidden;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
     background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
 }
 
 .sekcja {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,11 +40,12 @@ body {
 
 #sekcja-druga {
     position: fixed;
-    padding-top: 50px;
+    padding-top: 40px;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
     z-index: 20;
     overflow-y: scroll;
@@ -79,9 +82,10 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
     position: fixed;
-    top: 40%;
+    top: 42%;
     right: 10%;
     color: white;
+    flex-shrink: 0;
 }
 
 h2 {
@@ -103,29 +107,33 @@ h3 {
     position: absolute;
     flex-shrink: 0;
     margin-top: auto;
-    padding-bottom: 30px;
+    /*padding-bottom: 50px;*/
 }
 
 .lewy-dolny {
     position: absolute;  /* lub absolute */
-    bottom: 28%;
+    bottom: 30%;
     left: 4%;
     width: clamp(70px, 9vw, 130px);
     height: clamp(70px, 9vw, 130px);
     border-radius: 50%;
     object-fit: cover;
+    max-width: 100%;
+    display: block;
     z-index: 100;  /* na wierzchu innych elementów */
     transition: all 0.3s ease; /* płynna zmiana przy resize */
 }
 
 .prawy-dolny {
     position: absolute;  /* lub absolute */
-    bottom: 20%;
+    bottom: 22%;
     right: 38%;
     width: clamp(70px, 9vw, 130px);
     height: clamp(70px, 9vw, 130px);
     border-radius: 50%;
     object-fit: cover;
+    max-width: 100%;
+    display: block;
     z-index: 100;  /* na wierzchu innych elementów */
     transition: all 0.3s ease; /* płynna zmiana przy resize */
 }
@@ -138,6 +146,8 @@ h3 {
     height: clamp(60px, 7vw, 110px);
     border-radius: 50%;
     object-fit: cover;
+    max-width: 100%;
+    display: block;
     z-index: 100;  /* na wierzchu innych elementów */
     transition: all 0.3s ease; /* płynna zmiana przy resize */
 }
