--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
     font-size: 1rem;
     line-height: 1.5;
     overflow-x: hidden;
+    position: relative;
+    max-width: 100vw;
+    min-height: 100vh;
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
@@ -20,12 +23,14 @@ body {
 
 .sekcja {
     min-height: 100vh;
+    max-width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1);
     overflow: hidden;
+    overflow-y: hidden;
 }
 
 .ukryta {
@@ -40,7 +45,7 @@ body {
 
 #sekcja-druga {
     position: fixed;
-    padding-top: 40px;
+    padding-top: 20px;
     top: 0;
     left: 0;
     width: 100%;
@@ -86,6 +91,7 @@ body {
     right: 10%;
     color: white;
     flex-shrink: 0;
+    display: block;
 }
 
 h2 {
@@ -155,7 +161,11 @@ h3 {
 /* ŚNIEŻKI */
         .sniezka {
             position: absolute;
-            top: -50px;
+            top: 0; /*-50px bylo*/
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
             background: white;
             border-radius: 50%;
             opacity: 0.8;
@@ -335,7 +345,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 40px;
+    gap: 50px;
     margin: 60px 0;
     flex-wrap: wrap;
     overflow: visible;
