--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
     position: relative;
     max-width: 100vw;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
@@ -23,7 +25,9 @@ body {
 
 .sekcja {
     min-height: 100vh;
-    max-width: 100vw;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,6 +35,7 @@ body {
     transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1);
     overflow: hidden;
     overflow-y: hidden;
+    flex-shrink: 0;
 }
 
 .ukryta {
@@ -45,6 +50,10 @@ body {
 
 #sekcja-druga {
     position: fixed;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     padding-top: 20px;
     top: 0;
     left: 0;
@@ -87,8 +96,8 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
     position: fixed;
-    top: 42%;
-    right: 10%;
+    top: 40% !important;
+    right: 10% !important;
     color: white;
     flex-shrink: 0;
     display: block;
@@ -113,7 +122,8 @@ h3 {
     position: absolute;
     flex-shrink: 0;
     margin-top: auto;
-    /*padding-bottom: 50px;*/
+    padding-bottom: 60px;
+    margin-bottom: 0;
 }
 
 .lewy-dolny {
@@ -360,6 +370,7 @@ h3 {
     border-radius: 20px;
     padding: 40px 30px;
     width: 300px;
+    margin-top: 10px;
     overflow: hidden; /* WAŻNE: ukrywa wystające części zdjęcia */
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255,255,255,0.1);
