--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 
 #sekcja-druga {
     position: fixed;
-    padding-top: 20px;
+    padding-top: 30px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -62,6 +62,7 @@ body {
     height: auto;
     background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
     z-index: 20;
+    overflow-x: hidden;
     overflow-y: scroll;
     
     /* ZMIANA: translateY(-100vh) zamiast translateY(100vh) */
