--- a/style.css
+++ b/style.css
@@ -101,13 +101,14 @@ body {
 .opis {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
-    position: fixed;
+    position: absolute;
     top: 40% !important;
     right: 10% !important;
     color: white;
     flex-shrink: 0;
     display: flex;
     justify-content: center;
+    margin-top: 250px;
     margin-bottom: 20px;
 }
 
@@ -173,7 +174,7 @@ h3 {
 }
 
 .nad-przyciskiem {
-    position: fixed;  /* lub absolute */
+    position: absolute;  /* lub fixed */
     top: 15%;
     /*right: 71%;
     width: clamp(60px, 7vw, 110px);
